Cambios en permisos, modificacion a vista controlador e integracion a firebase

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -8,25 +8,26 @@
     <string name="action_sign_in">Login</string>
     <string name="text_registrarse">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="text_olvido_su_contrase_a">Forgot  password?</string>
+    <string name="text_olvido_su_contrase_a">Forgot password?</string>
     <string name="text_bienvenido">Welcome</string>
-    <string name="text_cerrar_sesi_n">English</string>
-    <string name="text_crear_caso">English</string>
-    <string name="text_mis_casos">English</string>
-    <string name="text_mis_tickets">English</string>
-    <string name="text_tickets_sin_asignar">English</string>
-    <string name="text_tickets_resueltos">English</string>
-    <string name="text_registrar_usuario">English</string>
-    <string name="text_e_mail">English</string>
-    <string name="text_canacelar">English</string>
-    <string name="text_resgistrarme">English</string>
-    <string name="text_ingresa_su_e_mail">English</string>
-    <string name="text_recuperar">English</string>
-    <string name="text_casos_frecuentes">English</string>
-    <string name="text_detalles">English</string>
-    <string name="text_solicitar_soporte">English</string>
-    <string name="text_inicio">English</string>
-    <string name="text_tickets_cerrados">English</string>
-    <string name="text_casos">English</string>
-    <string name="text_ticket">English</string>
+    <string name="text_cerrar_sesi_n">Log out</string>
+    <string name="text_crear_caso">Create case</string>
+    <string name="text_mis_casos">My cases</string>
+    <string name="text_mis_tickets">My tickets</string>
+    <string name="text_tickets_sin_asignar">Unassigned tickets</string>
+    <string name="text_tickets_resueltos">Solved tickets</string>
+    <string name="text_registrar_usuario">Sign In</string>
+    <string name="text_e_mail">Email</string>
+    <string name="text_canacelar">Cancel</string>
+    <string name="text_resgistrarme">Register</string>
+    <string name="text_ingresa_su_e_mail">Add Email</string>
+    <string name="text_recuperar">Recover</string>
+    <string name="text_casos_frecuentes">Frequent cases </string>
+    <string name="text_detalles">Details</string>
+    <string name="text_solicitar_soporte">Request support</string>
+    <string name="text_inicio">Home</string>
+    <string name="text_tickets_cerrados">Closed Tickets</string>
+    <string name="text_casos">Cases</string>
+    <string name="text_ticket">Tickets</string>
+    <string name="text_categorias">Categories</string>
 </resources>
